cmake_minimum_required(VERSION 3.0)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(cube-stand)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build-stand)
include(FindPkgConfig)
find_package(OpenGL REQUIRED)
pkg_search_module(SDL2 REQUIRED sdl2)
pkg_search_module(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
add_executable(cube-stand ../main.cpp ../window.cpp ../Cube.h ../Cube.cpp ../CubeTextured.cpp ../CubeTextured.h)
set_property(TARGET cube-stand PROPERTY CXX_STANDARD 11)
target_link_libraries(cube-stand ${OPENGL_LIBRARIES} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
add_custom_command(TARGET cube-stand POST_BUILD COMMAND cp -f ../Robot.bmp ../build-stand/Robot.bmp)